// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Edit /> renders as expected when hovering 1`] = `
<div
  className="block-editor-blocks-list"
>
  <div
    className="block-editor-reusable-blocks-inserter"
  >
    <Filter
      categoriesList={
        Array [
          Object {
            "id": 1,
            "name": "First",
          },
          Object {
            "id": 2,
            "name": "Second",
          },
          Object {
            "id": 3,
            "name": "Third",
          },
        ]
      }
      searchCategory={null}
      searchID={0}
      searchKeyword=""
      updateSearchCategory={[Function]}
      updateSearchKeyword={[Function]}
    />
    <List
      filteredBlocksList={Array []}
      isFetching={false}
      onHover={[Function]}
      onItemSelect={[Function]}
      searchID={0}
      searchKeywords={
        Array [
          "",
        ]
      }
    />
    <div
      className="block-editor-reusable-blocks-inserter__preview"
    >
      <div
        className="block-editor-reusable-blocks-inserter__preview-content"
      >
        <BlockPreview
          blocks={Object {}}
          padding={10}
          viewportWidth={500}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Edit /> renders as expected with empty categories list 1`] = `
<div
  className="block-editor-blocks-list"
>
  <div
    className="block-editor-reusable-blocks-inserter"
  >
    <Filter
      categoriesList={Array []}
      searchCategory={null}
      searchID={0}
      searchKeyword=""
      updateSearchCategory={[Function]}
      updateSearchKeyword={[Function]}
    />
    <List
      filteredBlocksList={Array []}
      isFetching={false}
      onHover={[Function]}
      onItemSelect={[Function]}
      searchID={0}
      searchKeywords={
        Array [
          "",
        ]
      }
    />
    <div
      className="block-editor-reusable-blocks-inserter__preview"
    />
  </div>
</div>
`;
